--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="contact_us">Feel free to reach out to us for sponsorship, advertising, partnerships, collaboration, donations/support via the email provided.</string>
     <string name="email">shaastrasamvad@gmail.com</string>
     <string name="feedback">Give us your valuable feedback for the app. You can mention improvements, suggestions, and your thoughts for further enhancing the app and its content.</string>
+    <string name="donate">Your generous contribution will help us make a difference!</string>
 </resources>
